Fix design issues on mobile devices

--- a/styles/Mobbern3.1/theme/style.css
+++ b/styles/Mobbern3.1/theme/style.css
@@ -32,6 +32,7 @@ em {
     #left-nav {
         float: none;
     }
+    #page-header .carousel .item,
     #caption_banner {
         min-height: 150px;
     }
